--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language:
-  java
+  - java
 jdk:
-- oraclejdk8
-before_install:
-- chmod +x gradlew
+  - openjdk8
 script:
-- ./gradlew test build
+- ./gradlew test
