now hosts from config

--- a/resources/application.conf
+++ b/resources/application.conf
@@ -7,3 +7,22 @@ ktor {
         modules = [ com.apmath.loans.ApplicationKt.module ]
     }
 }
+
+clients {
+    domain = "localhost:8080"
+    testing = "true"
+}
+
+applications {
+    domain = "localhost:8081"
+    testing = "true"
+}
+
+calculations {
+    domain = "localhost:8082"
+    testing = "true"
+}
+
+mock {
+    domain = "demo5033957.mockable.io"
+}
