--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ script:
 - ./gradlew test
 - docker build -t loans .
 - docker run -d -p 8080:8080 --name loans_container loans
+- curl http://127.0.0.1:8080/v1/info
 - docker stop loans_container
 - docker rm loans_container
 - docker rmi loans
