Provide configs with defaults

--- a/resources/application.conf
+++ b/resources/application.conf
@@ -7,3 +7,24 @@ ktor {
         modules = [ com.apmath.loans.ApplicationKt.module ]
     }
 }
+
+clients {
+    host = localhost
+    host = ${?CLIENTS_HOST}
+    port = 8080
+    port = ${?CLIENTS_PORT}
+}
+
+applications {
+    host = localhost
+    host = ${?APPLICATIONS_HOST}
+    port = 8084
+    port = ${?APPLICATIONS_PORT}
+}
+
+calculations {
+    host = localhost
+    host = ${?CALCULATIONS_HOST}
+    port = 8085
+    port = ${?CALCULATIONS_PORT}
+}
